# Enterprise-Knowledge-RAG-System

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  cleanup.ps1  docker-compose.local.yml  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements.txt
integration/: README.md  pyproject.toml
integration/evidence/: m1_contract_matrix.md  m2_readiness_report.md  m3_go_no_go.md  m3_release_readiness.md
integration/harness/: __init__.py  clients.py  purge.py  readiness.py  servers.py  stub_ekre.py
integration/matrix/: __init__.py  contract_matrix.py
integration/release/: __init__.py  readiness_package.py
integration/tests/: __init__.py  conftest.py  test_m1_contracts.py  test_m1_interfaces.py  test_m2_purge.py  test_m2_readiness.py  test_m2_resilience.py  test_m2_web_ui_e2e.py  test_m3_release.py
services/ekcp/: .env.example  README.md  pyproject.toml  requirements.txt
services/ekcp/scripts/: demo_agents.py  demo_context_prompt.py  demo_conversation.py  demo_foundations.py  demo_governance.py  demo_memory.py  demo_model_gateway.py  demo_readiness.py  demo_workflow.py  start_api.py
services/ekcp/src/: composition.py
services/ekcp/src/api/: __init__.py  agent.py  app.py  chat.py  context.py  conversation.py  dependencies.py  governance.py  guards.py  health.py  memory.py  middleware.py  model.py  prompt.py  readiness.py  workflow.py
services/ekcp/src/config/: __init__.py  settings.py
services/ekcp/src/domain/: __init__.py
services/ekcp/src/domain/agents/: __init__.py  coordination.py  errors.py  models.py  policy.py  registry.py  runtime.py
services/ekcp/src/domain/context/: __init__.py  assembler.py  errors.py  models.py  policy.py  (+2 more)
services/ekcp/tests/: __init__.py  conftest.py  test_agent_api.py  test_agents.py  test_api_foundations.py  test_context_assembly.py  test_context_prompt_api.py  test_conversation_api.py  test_conversation_engine.py  test_conversation_lifecycle.py  test_dialog.py  test_gateway.py  test_governance.py  test_governance_api.py  test_governance_persistence.py  test_ingress_guards.py  test_intent.py  test_knowledge.py  test_langchain_resources.py  test_memory.py  test_memory_api.py  test_model_api.py  test_observability.py  test_planning.py  test_prompt_orchestration.py  test_readiness.py  test_readiness_api.py  test_security_context.py  test_session.py  test_settings.py  test_tools.py  test_workflow.py  test_workflow_api.py
services/ekie/: .env.example  README.md  code_structure.json  ekie.ps1  pyproject.toml  requirements.txt
services/ekie/scripts/: acceptance_report.py  benchmark_rich_media.py  cleanup_dev_artifacts.py  demo_chunking.py  demo_embedding.py  demo_intelligence.py  demo_orchestration.py  demo_publishing.py  demo_security.py  demo_sync.py  demo_transform.py  demo_validation.py  deploy.py  ingestion_status.py  monitor.py  production_ingest_worker.py  production_sync.py  purge_documents.py  recover_lost_payload_docs.py  repair_missing_qdrant_publish.py  requeue_jobs.py  setup.py  start_api.py  start_ingest_worker.py  start_worker.py  validate_qdrant_delete_path.py
services/ekie/src/: composition.py
services/ekie/src/api/: __init__.py  app.py  dependencies.py  health.py  ingestion.py  middleware.py
services/ekie/src/config/: __init__.py  settings.py
services/ekie/src/domain/: __init__.py
services/ekie/tests/: __init__.py  _settings_support.py  _validation_support.py  conftest.py  test_change_detection.py  test_chunking_engine.py  test_chunking_recursive.py  test_chunking_strategies.py  test_chunking_validation.py  test_composition.py  test_composition_security.py  test_connectors.py  test_control_plane_models.py  test_document_deletion.py  test_embedding_engine.py  test_embedding_provider.py  test_embedding_provider_huggingface.py  test_embedding_provider_ollama.py  test_embedding_validation.py  test_health.py  test_ingest_worker.py  test_ingestion_api.py  test_intelligence_analyzer_llm.py  test_intelligence_analyzers.py  test_intelligence_ast.py  test_intelligence_engine.py  test_job_queue.py  test_langchain_resources.py  test_local_asset_storage.py  test_observability.py  test_orchestration_engine.py  test_orchestration_runner.py  test_plugins.py  test_publishing_collections.py  test_publishing_engine.py  test_publishing_metadata.py  test_publishing_provider.py  test_publishing_provider_qdrant.py  test_rate_limit.py  test_security.py  (+15 more)
services/ekre/: .env.example  README.md  p2_build_rag_with_chunking.ipynb  pyproject.toml  requirements.txt
services/ekre/scripts/: demo_assembly.py  demo_execution.py  demo_foundations.py  demo_fusion.py  demo_governance.py  demo_query_intelligence.py  demo_ranking.py  demo_readiness.py  demo_retrieval.py  download_models.py  inspect_qdrant.py  smoke_retrieve.py  start_api.py
services/ekre/src/: composition.py
services/ekre/src/api/: __init__.py  app.py  candidates.py  context.py  dependencies.py  execution.py  health.py  middleware.py  query.py  ranking.py  readiness.py  retrieval.py  retrieve.py
services/ekre/src/config/: __init__.py  settings.py
services/ekre/src/domain/: __init__.py
services/ekre/tests/: _assembly_support.py  _execution_support.py  _fusion_support.py  _ranking_support.py  _retrieval_support.py  conftest.py  test_api_foundations.py  test_assembly_engine.py  test_assembly_selection.py  test_candidates_api.py  test_connectors.py  test_context_api.py  test_evaluation.py  test_execution_api.py  test_execution_lifecycle.py  test_execution_orchestrator.py  test_execution_runner.py  test_execution_scheduler.py  test_fusion.py  test_fusion_collection.py  test_governance_audit.py  test_governance_masking.py  test_governance_pipeline.py  test_governance_trace.py  test_inheritance.py  test_langchain_resources.py  test_observability.py  test_query_api.py  test_query_enrichment.py  test_query_intent.py  test_query_llm.py  test_query_pipeline.py  test_query_planner.py  test_query_understanding.py  test_ranking_api.py  test_ranking_engine.py  test_ranking_reranker.py  test_ranking_scoring.py  test_readiness.py  test_readiness_api.py  (+8 more)
(+425 files in other folders)
