[project]
name = "ekrag-integration"
version = "0.1.0"
description = "Master Integration harness and cross-engine validation suite for EK-RAG."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
pythonpath = [".", "../packages/contracts/src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "ANN", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "../packages/contracts/src"
files = ["harness", "matrix", "release", "tests"]
