[project]
name = "ekcp"
version = "0.1.0"
description = "Enterprise Knowledge Chat Platform (EKCP) - governed conversational orchestration"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
# Local self-hosted chat models behind the model gateway seam. The chat model is
# configuration-selected; no provider is hardcoded into engine logic. For NVIDIA
# GPU acceleration, install a CUDA build of torch that matches your driver.
huggingface = [
  "langchain-huggingface>=0.0.3",
  "numpy>=1.26",
  "transformers>=4.0.0",
  "accelerate>=0.21.0",
  "torch>=2.0.0",
]
# Ollama runtime + LangGraph agent runtime for the live orchestration path.
orchestration = [
  "langchain-core>=0.2.0",
  "langchain-ollama>=0.2.0",
  "langgraph>=0.2.0",
]
# Real control-plane and cache backends (config-selected behind engine seams).
backends = [
  "sqlalchemy>=2.0.0",
  "redis>=5.0.0",
  "httpx>=0.27.0",
]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "mypy>=1.10.0",
]

[project.scripts]
ekcp-api = "scripts.start_api:main"

[tool.pytest.ini_options]
pythonpath = ["src", "../../packages/contracts/src", "tests"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = "src:../../packages/contracts/src"

# Optional real-provider clients are lazily imported behind engine seams and are
# not installed on the default offline path; ignore their missing stubs. This
# list is kept to exactly the modules imported so far and grows per sprint
# (langchain_*, langgraph.*, redis) as those seams come online.
[[tool.mypy.overrides]]
module = [
  "langchain_huggingface",
  "langchain_ollama",
  "langchain_core.output_parsers",
  "langgraph.graph",
  "langgraph.checkpoint.memory",
  "langfuse",
  "langfuse.langchain",
]
ignore_missing_imports = true
