[project]
name = "ekie"
version = "0.1.0"
description = "Enterprise Knowledge Ingestion Engine (EKIE) - platform foundations"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
]

[project.optional-dependencies]
mssql = [
  "pyodbc>=5.1.0",
]
storage = [
  "minio>=7.2.0",
]
# Local HuggingFace models for Embeddings & Intelligence.
# For NVIDIA GPU acceleration, install a CUDA build of torch that matches your
# driver INSTEAD of the default CPU wheel, e.g. (CUDA 13):
#   pip install torch==2.12.1 --index-url https://download.pytorch.org/whl/cu130
# Then set EKIE_EMBEDDING__DEVICE=auto and EKIE_EMBEDDING__TORCH_DTYPE=float16.
huggingface = [
  "langchain-huggingface>=0.0.3",
  "sentence-transformers>=3.0.0",
  "transformers>=4.0.0",
  "accelerate>=0.21.0",
  "torch>=2.0.0",
]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "mypy>=1.10.0",
]

[project.scripts]
ekie-api = "scripts.start_api:main"
ekie-worker = "scripts.start_worker:main"
ekie-ingest-worker = "scripts.start_ingest_worker:main"
ekie-setup = "scripts.setup:main"
ekie-cleanup = "scripts.cleanup_dev_artifacts:main"
ekie-deploy = "scripts.deploy:main"
ekie-monitor = "scripts.monitor:main"
ekie-purge = "scripts.purge_documents:main"

[tool.pytest.ini_options]
pythonpath = ["src", "../../packages/contracts/src", "tests"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = "src:../../packages/contracts/src"

# Optional real-provider clients are lazily imported behind engine seams and are
# not installed on the default offline path; ignore their missing stubs.
[[tool.mypy.overrides]]
module = [
  "ollama",
  "qdrant_client",
  "langchain_ollama",
  "langchain_core.output_parsers",
  "langchain_core.prompts",
  "langgraph.graph",
  "langgraph.checkpoint.memory",
  "langfuse",
  "langchain_qdrant",
]
ignore_missing_imports = true
